--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-gradio
-fastrtc
-opencv-python-headless
-mediapipe
-numpy
-
-# You might need these depending on your OS/environment
-# pytesseract # Add if using OCR functions, needs tesseract-ocr installed system-wide
-# Pillow # Usually a dependency of gradio/opencv, but good to list explicitly
+opencv-python-headless==4.8.0.74
+mediapipe==0.10.8
+numpy==1.24.4
+streamlit==1.41.1
+streamlit-webrtc==0.62.4
+Pillow==11.2.1
+twilio~=9.4.3
